# zprotocol-c

./: CMakeLists.txt  LICENSE  Makefile  README.md  run.py
.github/workflows/: tests.yml
example/: concurrent-client.c  concurrent-server.c  sync-client.c  sync-server.c
src/: helpers.c  utils.c  utils.h  zprotocol.c  zprotocol.h
test/: test.c  time.c
